--- a/src/app/components/home/enrollment/enrollment-packs/enrollment-packs.component.html
+++ b/src/app/components/home/enrollment/enrollment-packs/enrollment-packs.component.html
@@ -32,7 +32,7 @@
                     <div class="pack-info" [innerHtml]="data.longDetail1">
                     </div>
                     <div class="pack-cta">
-                        <button class="btn btn-info">Add To Order</button>
+                        <button class="btn btn-info" (click)="addToCart(data)" >Add To Order</button>
                     </div>
                 </div>
             </div>
