--- a/src/app/components/layout/app-header/app-header.component.css
+++ b/src/app/components/layout/app-header/app-header.component.css
@@ -1,228 +1,298 @@
 header nav {
-  border-bottom: 1px solid #f1f1f1;
-  box-shadow: 0px 0px 5px #c1c1c1;
+    border-bottom: 1px solid #f1f1f1;
+    box-shadow: 0px 0px 5px #c1c1c1;
 }
 
 div#main-menu {
-  justify-content: space-between !important;
+    justify-content: space-between !important;
 }
 
 div#main-menu li a {
-  font-family: "g-demibold";
-  text-transform: uppercase;
-  color: #2aa8bf;
+    font-family: "g-demibold";
+    text-transform: uppercase;
+    color: #2aa8bf;
 }
 
 div#main-menu li {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 
 ul.right-menu {
-  list-style-type: none;
-  margin: 0;
+    list-style-type: none;
+    margin: 0;
 }
 
 ul.right-menu li {
-  display: inline-block;
+    display: inline-block;
 }
 
 ul.right-menu li a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 header a.navbar-brand img {
-  max-width: 90px;
+    max-width: 90px;
 }
 
 ul.right-menu li a.log-links {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .navbar-toggler i {
-  font-size: 26px;
-  color: #707070;
+    font-size: 26px;
+    color: #707070;
 }
 
-
 div#main-menu.active {
-  position: absolute;
-  top: 130px;
-  background-color: #fff;
-  width: 100%;
-  z-index: 999;
-  left: 0px;
-  padding: 10px;
+    position: absolute;
+    top: 130px;
+    background-color: #fff;
+    width: 100%;
+    z-index: 999;
+    left: 0px;
+    padding: 10px;
 }
 
 ul.right-menu li {
-  position: relative;
+    position: relative;
 }
 
 ul.right-menu li a {
-  position: relative;
+    position: relative;
 }
 
 ul.right-menu li a span.cart-info {
-  width: 9px;
-  height: 9px;
-  background-color: #ff0000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  padding: 7px;
-  font-size: 9px;
-  font-family: 'g-medium';
-  border: 2px solid #ffffff;
-  position: absolute;
-  top: -6px;
-  left: 8px;
-  color: #fff;
+    width: 9px;
+    height: 9px;
+    background-color: #ff0000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    padding: 7px;
+    font-size: 9px;
+    font-family: 'g-medium';
+    border: 2px solid #ffffff;
+    position: absolute;
+    top: -6px;
+    left: 8px;
+    color: #fff;
 }
 
 ul.right-menu li.cart-item {
-  margin: 0 15px 0 0px !important;
+    margin: 0 15px 0 0px !important;
 }
-
 
 ul.right-menu li a i {
-  font-size: 17px;
+    font-size: 17px;
 }
 
+ul.right-menu li i.fas.fa-user-circle {
+    font-size: 19px;
+}
 
 .searchOptions {
-  position: relative;
+    position: relative;
 }
 
 .search-ico {
-  position: absolute;
-  top: 17px;
-  right: 24px;
-  border:none;
-  background-color: transparent;
+    position: absolute;
+    top: 17px;
+    right: 24px;
+    border: none;
+    background-color: transparent;
 }
 
 .search-ico i {
-  color: #b0b0b0;
+    color: #b0b0b0;
 }
 
 .searchOptionsbox {
-  position: absolute;
-  width: 100%;
-  background-color: #ffffffd4;
-  left: 0;
-  top: 0;
+    position: absolute;
+    width: 100%;
+    background-color: #ffffffd4;
+    left: 0;
+    top: 0;
 }
 
 .searchOptionsbox .searchOption-inner {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 450px;
-  margin: 0 auto;
-  padding: 6px 20px 4px;
-  position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 450px;
+    margin: 0 auto;
+    padding: 6px 20px 4px;
+    position: relative;
 }
 
 .searchOptionsbox .close-ico {
-  position: absolute;
-  right: 10px;
-  top: 15px;
+    position: absolute;
+    right: 10px;
+    top: 15px;
 }
 
 .searchOptionsbox .searchOption-inner input {
-  height: 45px;
+    height: 45px;
 }
 
 .searchOptions input {
-  padding-right: 30px;
+    padding-right: 30px;
 }
 
-@media(min-width:992px)
-{
+@media(min-width:992px) {
     .logo-center {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
     }
     #main-menu.show-mob {
-      display: none;
-  }
+        display: none;
+    }
 }
 
 a.nav-link.active {
-  background: #2aa8bf;
-  color: #ffffff !important;
-  border-radius: 4px;
+    background: #2aa8bf;
+    color: #020202 !important;
+    border-radius: 4px;
 }
 
-@media (max-width:991px)
-{
-  div#main-menu li.mob-search {
-    margin: 0 !important;
-    padding: 8px 10px;
+@media (max-width:991px) {
+    div#main-menu li.mob-search {
+        margin: 0 !important;
+        padding: 8px 10px;
+    }
+    div#main-menu.showmenu {
+        position: absolute;
+        top: 58px;
+        background-color: #ffffff;
+        z-index: 2;
+        left: 0px;
+        width: 100%;
+        transition: all ease 0.5s;
+    }
+    header .logo-center {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    header button.navbar-toggler i {
+        color: #2aa8bf !important;
+    }
+    div#main-menu.showmenu ul li a {
+        background-color: #fff;
+        padding: 10px 10px;
+        border-bottom: 1px solid #f5f5f5;
+        border-radius: 0px;
+        color: #2aa8bf !important;
+    }
+    div#main-menu.showmenu ul li a.active {
+        color: #1cb1c5 !important;
+    }
+    div#main-menu.showmenu ul.right-menu {
+        padding: 20px 6px;
+    }
+    div#main-menu.showmenu .logo-center {
+        display: none;
+    }
+    div#main-menu.showmenu ul.right-menu li a {
+        padding: 0 8px 0;
+        border: none;
+    }
+    .searchOptionsbox {
+        background-color: #fff;
+    }
+    .searchOptionsbox .searchOption-inner {
+        max-width: 280px;
+    }
+    .searchOptionsbox .close-ico {
+        z-index: 11;
+    }
+    .searchOptionsbox .close-ico a {
+        display: block;
+    }
 }
-  div#main-menu.showmenu {
+
+.button {
+    font-size: 1em;
+    /* padding: 10px; */
+    color: #fff;
+    border-radius: 20px/50px;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+}
+
+.button:hover {
+    background: #06D85F;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    padding: 20px 25px;
+    background: #fff;
+    width: auto;
     position: absolute;
-    top: 58px;
-    background-color: #ffffff;
-    z-index: 2;
-    left: 0px;
-    width: 100%;
-    transition: all ease 0.5s;
-}
-header .logo-center {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
+    top: 127px;
+    transition: all 3s ease-in-out;
+    right: 15%;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-header button.navbar-toggler i {
-  color: #2aa8bf !important;
+.popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: Tahoma, Arial, sans-serif;
 }
 
-div#main-menu.showmenu ul li a {
-    background-color: #fff;
-    padding: 10px 10px;
-    border-bottom: 1px solid #f5f5f5;
-    border-radius: 0px;
-    color: #2aa8bf !important;
+.popup .close {
+    position: absolute;
+    top: 22px;
+    right: 10px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #3299ac;
 }
 
-div#main-menu.showmenu ul li a.active {
-    color: #1cb1c5 !important;
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
 }
 
-div#main-menu.showmenu ul.right-menu {
-    padding: 20px 6px;
+ul.navbar-nav.other-links a {
+    color: #2d9fb5;
+    text-decoration: none;
+    background-color: transparent;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 1px;
 }
 
-
-div#main-menu.showmenu .logo-center {
-    display: none;
+@media screen and (max-width: 700px) {
+    .box {
+        width: 70%;
+    }
+    .popup {
+        width: 70%;
+    }
 }
-
-div#main-menu.showmenu ul.right-menu li a {
-    padding: 0 8px 0;
-    border: none;
-}
-.searchOptionsbox {
-  background-color: #fff;
-}
-.searchOptionsbox .searchOption-inner{
-  max-width: 280px;
-}
-.searchOptionsbox .close-ico {
-  z-index: 11;
-}
-
-.searchOptionsbox .close-ico a {
-  display: block;
-}
-
-}
-
-
-
